// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando <GifExpertApp /> Debe mostrarse correctamente 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;

exports[`Probando <GifExpertApp /> debe mostrar una lista de categorias 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="puppies"
      key="puppies"
    />
    <GifGrid
      category="kittens"
      key="kittens"
    />
  </ol>
</div>
`;
